<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/aviao"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/login_logo_marginBottom"
        android:contentDescription="@string/img_content_description" />

    <TextView
        android:text="@string/login_lbl_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/login_edt_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_edt_user_hint"
        android:singleLine="true"
        android:maxLength="15"
        android:imeOptions="actionNext" />

    <TextView
        android:text="@string/login_lbl_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/login_edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_edt_password_hint"
        android:singleLine="true"
        android:maxLength="15"
        android:inputType="textPassword"
        android:imeOptions="actionDone" />

    <Button
        android:id="@+id/login_btn_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_btn_enter_value"
        android:layout_marginTop="@dimen/login_btn_enter_marginTop" />

</LinearLayout>
